arreglando rutas y redirigiendo a componentes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">MyTV</a>
+    <a class="navbar-brand" routerLink="/mytv">MyTV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,13 +8,13 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-                <a class="nav-link" href="#">TVS</a>
+                <a class="nav-link" routerLink="/tvs">TVS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">PlayLists</a>
+                <a class="nav-link" routerLink="/playlists">PlayLists</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Elements</a>
+                <a class="nav-link" routerLink="/elements">Elements</a>
             </li>
 
 
