agregando servicio de firebase y prueba de lectura

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,10 +11,10 @@
                 <a class="nav-link" routerLink="/tvs">TVS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/playlists">PlayLists</a>
+                <a class="nav-link" routerLink="/playlists">Listas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/elements">Elements</a>
+                <a class="nav-link" routerLink="/elements">Elementos</a>
             </li>
 
 
