--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<ul>
+    <li class="text" *ngFor="let item of items | async">
+        {{item.name}}
+    </li>
+    <li class="text" *ngFor="let item of items | async">
+        {{item.title}}
+    </li>
+</ul>
