--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <ul>
-    <li class="text" *ngFor="let item of items | async">
-        {{item.name}}
+    <li class="text" *ngFor="let element of elements | async">
+        {{element.name}}<small>{{element.title}}</small>
     </li>
-    <li class="text" *ngFor="let item of items | async">
-        {{item.title}}
-    </li>
+
 </ul>
